# lingo-flow

./: .gitignore  Dockerfile  README.md  app.py  block.py  block_manager.py  execution_engine.py  ui.py
backend/: .envrc  code_generator.py  pyproject.toml
backend/backend/: settings.py  urls.py
backend/nodes/: models.py  tests.py  urls.py  views.py
backend/nodes/migrations/: 0001_initial.py  0002_node_response.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/frontend/: package-lock.json  package.json
frontend/src/api/: api.d.ts  api.js
frontend/src/components/: main-canvas.vue
frontend/src/components/vue-flow/: common-prompt-module.vue
src/: App.css  App.js  Block.js  Connection.js  blocksConfig.js
